docker-compose-exercises/location-service-kubernetes/event-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\acidicMercury8\go\bin\kompose.exe convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: event-service
  name: event-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: event-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\acidicMercury8\go\bin\kompose.exe convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/location-service-kubernetes-redis-network: "true"
        io.kompose.service: event-service
    spec:
      containers:
        - env:
            - name: REDIS_HOST
              value: redis:6379
          image: event-service:0.1
          name: event-service
          resources: {}
      restartPolicy: Always
status: {}
