docker-compose-exercises/location-service-kubernetes/task-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\acidicMercury8\go\bin\kompose.exe convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: task-manager
  name: task-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: task-manager
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\acidicMercury8\go\bin\kompose.exe convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/location-service-kubernetes-location-network: "true"
        io.kompose.network/location-service-kubernetes-redis-network: "true"
        io.kompose.service: task-manager
    spec:
      containers:
        - env:
            - name: LOCATION_HOST
              value: http://location-service:8080
            - name: REDIS_HOST
              value: redis:6379
          image: task-manager:0.1
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:8080/ping
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: task-manager
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
