docker-compose-exercises/location-service-kubernetes/location-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\acidicMercury8\go\bin\kompose.exe convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: location-service
  name: location-service
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: location-service
status:
  loadBalancer: {}
