docker-compose-exercises/location-service-kubernetes/task-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\acidicMercury8\go\bin\kompose.exe convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: task-manager
  name: task-manager
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: task-manager
status:
  loadBalancer: {}
