docker-compose-exercises/location-service-kubernetes/location-service-kubernetes-location-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: location-service-kubernetes-location-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/location-service-kubernetes-location-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/location-service-kubernetes-location-network: "true"
